# ESPNowMidiBridge

./: API.md  CMakeLists.txt  README.md  sdkconfig.defaults
main/: BridgingHeader.h  CMakeLists.txt  COBSCodec.swift  ESPIDFShim.c  Errors.swift  Instrument.swift  Kconfig.projbuild  MACStuff.swift  Main.swift  NoteTracker.swift  ProtocolSafeLog.swift  SerialTransport.swift  Translator.swift  TranslatorError.swift  Types.swift  swift_sections.lf
main/Radio/: Radio.swift  RadioControl.swift  RadioPeers.swift  RadioTypes.swift
